[gd_scene load_steps=5 format=3 uid="uid://3er5iu5rv6x5"]

[ext_resource type="Script" uid="uid://bepl2d3mo3hi8" path="res://levels/level_templates/cutscene.gd" id="1_c2sqc"]
[ext_resource type="Texture2D" uid="uid://d08jg2xoh0tea" path="res://splash_art/Cranky Lab.png" id="3_nk214"]
[ext_resource type="AudioStream" uid="uid://jcked2fvnu4p" path="res://sounds/music/Cranky's Lab.mp3" id="4_nk214"]
[ext_resource type="FontFile" uid="uid://crtrgur4xllmj" path="res://Font/PublicPixel.ttf" id="4_qvklu"]

[node name="CutsceneTemplate" type="Node2D"]
script = ExtResource("1_c2sqc")
export_file_path = "res://Dialogue/cutscene_1.txt"

[node name="next_button" type="Button" parent="."]
unique_name_in_owner = true
z_index = 5
z_as_relative = false
offset_left = 976.0
offset_top = 3.0
offset_right = 1159.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("4_qvklu")
theme_override_font_sizes/font_size = 30
text = "Next:"

[node name="skip_button" type="Button" parent="."]
unique_name_in_owner = true
z_index = 5
offset_left = 2.0
offset_top = 564.0
offset_right = 185.0
offset_bottom = 645.0
theme_override_fonts/font = ExtResource("4_qvklu")
theme_override_font_sizes/font_size = 30
text = "Skip:"

[node name="cutscene_image" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -5
offset_left = -7.0
offset_top = -9.0
offset_right = 1247.0
offset_bottom = 661.0
mouse_filter = 2
texture = ExtResource("3_nk214")

[node name="cutscene_dialouge_box" type="Label" parent="."]
unique_name_in_owner = true
z_index = 1
z_as_relative = false
offset_left = 16.0
offset_top = 10.0
offset_right = 969.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("4_qvklu")
theme_override_font_sizes/font_size = 20
text = "Talk text here:"

[node name="Score_display_timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="music_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nk214")
autoplay = true
bus = &"Music"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 978.0
offset_bottom = 84.0
color = Color(0, 0, 0, 0.470588)

[node name="cutscene_props" type="Node" parent="."]

[connection signal="timeout" from="Score_display_timer" to="." method="_on_score_display_timer_timeout"]
